<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2015 LAM Creations
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Scaffold Sample App</string>
    <string name="drawer_activity">Drawer Activity</string>
    <string name="video_splash_screen">Video Splash Screen</string>
    <string name="toolbar_activity">Toolbar Activity</string>
    <string name="coordinator_activity">Coordinator Activity</string>
    <string name="tab_activity">Tab Activity</string>
    <string name="tab_drawer_activity">Tab Drawer Activity</string>
    <string name="collapsing_toolbar_activity">Collapsing Toolbar Activity</string>
    <string name="collapsing_toolbar_drawer_activity">Collapsing Toolbar Drawer Activity</string>
    <string name="collapsing_toolbar_tab_drawer_activity">Collapsing Toolbar Tab Drawer Activity</string>
    <string name="searchable_activity">Searchable Activity</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="settings_activity_with_headers">Setting Activity with Headers</string>
    <string name="search_scaffold">Search Scaffold</string>
    <string name="toolbar_bottom_navigation_scaffold">Toolbar Activity w/ Bottom Nav</string>
    <string name="bottom_navigation_scaffold">Bottom Navigation Activity</string>
    <string name="coordinator_bottom_navigation_scaffold">Coordinator Bottom Navigation Activity</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

</resources>
